--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,50 @@ include CHANGELOG.md
 # 包含配置文件
 include requirements.txt
 include pytest.ini
+include pyproject.toml
+include MANIFEST.in
+include Makefile
+
+# 包含发布相关文件
+include publish.bat
+include .pypirc.template
+
+# 包含文档目录
+recursive-include docs *.md *.rst *.txt
+
+# 包含示例目录
+recursive-include examples *.py *.md *.txt
+
+# 包含脚本目录
+recursive-include scripts *.py *.bat *.sh
+
+# 包含测试文件（可选，通常不包含在分发包中）
+# recursive-include tests *.py
+
+# 排除不需要的文件
+exclude .gitignore
+exclude .git*
+exclude *.pyc
+exclude *.pyo
+exclude *.pyd
+exclude .DS_Store
+exclude Thumbs.db
+
+# 排除构建和缓存目录
+prune build
+prune dist
+prune *.egg-info
+prune __pycache__
+prune .pytest_cache
+prune .mypy_cache
+prune .coverage
+
+# 排除IDE和编辑器文件
+prune .vscode
+prune .idea
+exclude *.swp
+exclude *.swo
+exclude *~
 include Makefile
 include .gitignore
 
