--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,6 +189,6 @@ exclude_lines = [
     "raise NotImplementedError",
     "if 0:",
     "if __name__ == .__main__.:",
-    "class .*\bProtocol\):",
+    "class .*\\bProtocol\\):",
     "@(abc\.)?abstractmethod",
 ]
