--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,5 +190,5 @@ exclude_lines = [
     "if 0:",
     "if __name__ == .__main__.:",
     "class .*\\bProtocol\\):",
-    "@(abc\.)?abstractmethod",
+    "@(abc\\.)?abstractmethod",
 ]
